third_party/move/tools/move-package-manifest/tests/build-options/invalid-langauge-version-2.66.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [build]
6 | language_version = "2.66"
  |                    ^^^^^^ unrecognized language version "2.66" (supported versions: "2", "2.0"-"2.5")
  |
